--- a/lib/motion/project/gradle.erb
+++ b/lib/motion/project/gradle.erb
@@ -4,6 +4,7 @@ apply plugin: 'eclipse'
 task generateDependencies(type: Jar) {
   exclude 'META-INF/LICENSE'
   exclude 'META-INF/LICENSE.txt'
+  exclude 'META-INF/NOTICE'
   exclude 'META-INF/NOTICE.txt'
 
   baseName = 'dependencies'
