support google libs repository

--- a/lib/motion/project/gradle.erb
+++ b/lib/motion/project/gradle.erb
@@ -1,6 +1,5 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
-apply plugin: 'application'
 
 task generateDependencies(type: Copy) {
   from sourceSets.main.runtimeClasspath
@@ -9,9 +8,16 @@ task generateDependencies(type: Copy) {
 
 repositories {
   def androidHome = System.getenv("RUBYMOTION_ANDROID_SDK")
-  maven {
-    url "$androidHome/extras/android/m2repository/"
-  }
+  <% if android_repository %>
+    maven {
+      url "$androidHome/extras/android/m2repository/"
+    }
+  <% end %>
+  <% if google_repository %>
+    maven {
+      url "$androidHome/extras/google/m2repository/"
+    }
+  <% end %>
   <% @repositories.each do |url| %>
     maven {
       url "<%= url %>"
