--- a/lib/motion/project/gradle.erb
+++ b/lib/motion/project/gradle.erb
@@ -9,12 +9,12 @@ task generateDependencies(type: Copy) {
 repositories {
   <% if android_repository %>
     maven {
-      url "<%= ENV['RUBYMOTION_ANDROID_SDK'] %>/extras/android/m2repository/"
+      url "<%= ENV['RUBYMOTION_ANDROID_SDK'].shellescape %>/extras/android/m2repository/"
     }
   <% end %>
   <% if google_repository %>
     maven {
-      url "<%= ENV['RUBYMOTION_ANDROID_SDK'] %>/extras/google/m2repository/"
+      url "<%= ENV['RUBYMOTION_ANDROID_SDK'].shellescape %>/extras/google/m2repository/"
     }
   <% end %>
   <% @repositories.each do |url| %>
