--- a/lib/motion/project/settings.erb
+++ b/lib/motion/project/settings.erb
@@ -1,4 +1,4 @@
 <% @libraries.each do |library| %>
   include '<%= library[:name] %>'
-  project(':<%= library[:name] %>').projectDir = new File('<%= library[:path] %>')
+  project(':<%= library[:name] %>').projectDir = new File('<%= library[:path].shellescape %>')
 <% end %>
