--- a/lib/motion/project/gradle.erb
+++ b/lib/motion/project/gradle.erb
@@ -30,10 +30,10 @@ dependencies {
     compile project(':<%= library[:name] %>')
   <% end %>
   <% @dependencies.each do |dependency| %>
-    <% if dependency.is_a?(String) %>
-      compile '<%= dependency %>'
-    <% else %>
+    <% if dependency.is_a?(LegacyDependency) %>
       <%= dependency.parse %>
+    <% else %>
+      compile '<%= dependency %>'
     <% end %>
   <% end %>
 }
