--- a/lib/motion/project/gradle.erb
+++ b/lib/motion/project/gradle.erb
@@ -1,5 +1,27 @@
+buildscript {
+  repositories {
+    jcenter()
+    mavenCentral()
+  }
+  dependencies {
+    <% @classpaths.each do |classpath| %>
+      classpath '<%= classpath %>'
+    <% end %>
+  }
+}
+
+allprojects {
+  repositories {
+    jcenter()
+    mavenCentral()
+  }
+}
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
+<% @plugins.each do |plugin| %>
+  apply plugin: '<%= 'com.google.gms.google-services' %>'
+<% end %>
 
 task generateDependencies(type: Copy) {
   from sourceSets.main.runtimeClasspath
@@ -22,7 +44,6 @@ repositories {
       url "<%= url %>"
     }
   <% end %>
-  mavenCentral()
 }
 
 dependencies {
