--- a/lib/motion_gradle/templates/build.gradle.erb
+++ b/lib/motion_gradle/templates/build.gradle.erb
@@ -1,6 +1,6 @@
 buildscript {
   repositories {
-    jcenter()
+    google()
     mavenCentral()
   }
   dependencies {
@@ -12,7 +12,7 @@ buildscript {
 
 allprojects {
   repositories {
-    jcenter()
+    google()
     mavenCentral()
   }
 }
