--- a/lib/motion_gradle/templates/aidl_build.gradle.erb
+++ b/lib/motion_gradle/templates/aidl_build.gradle.erb
@@ -5,7 +5,8 @@ buildscript {
     mavenCentral()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:1.0.+'
+    // newer versions require Java 11
+    classpath 'com.android.tools.build:gradle:4.2.0'
   }
 }
 
