Update config for Gradle version 7
The `--build-file` option has been replaced by `--project-root`.

The `duplicatesStrategy` has to be explicitly set:
https://docs.gradle.org/current/userguide/upgrading_version_5.html#implicit_duplicate_strategy_for_copy_or_archive_tasks_has_been_deprecated

`compile` has been deprecated and should be replaced with `implementation`.

--- a/lib/motion_gradle/templates/build.gradle.erb
+++ b/lib/motion_gradle/templates/build.gradle.erb
@@ -51,6 +51,7 @@ configurations {
 task generateDependencies(type: Copy) {
   from sourceSets.main.runtimeClasspath
   into 'dependencies/'
+  duplicatesStrategy = 'include'
 }
 
 repositories {
@@ -73,10 +74,10 @@ repositories {
 
 dependencies {
   <% libraries.each do |library| %>
-    compile project(':<%= library[:name] %>')
+    implementation project(':<%= library[:name] %>')
   <% end %>
   <% dependencies.each do |dependency| %>
-    compile '<%= dependency.name %>', {
+    implementation '<%= dependency.name %>', {
       <% dependency.excludes.each do |exclude| %>
         exclude module: '<%= exclude[:module] %>', group: '<%= exclude[:group] %>'
       <% end %>
